--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,27 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h1{
+  text-align:center;
+}
+
+nav{
+  display:flex;
+  justify-content: space-around;
+}
+
+form{
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+button{
+  width: 20%;
+}
+
+label{
+  margin: 10px;
+}
